@@ -19,6 +19,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10590: xml.sax.parseString() now supports string argument.
+
 - Issue #23338: Fixed formatting ctypes error messages on Cygwin.
   Patch by Makoto Kato.
 
